/**
 * Copyright Â© 2016-2025 The Thingsboard Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package integration;

option java_multiple_files = true;
option java_package = "org.thingsboard.mqtt.broker.gen.integration";
option java_outer_classname = "IntegrationProtos";

import "queue.proto";

// in-sync with ComponentLifecycleEvent.java
enum ComponentLifecycleEventProto {
  CREATED = 0;
  UPDATED = 1;
  DELETED = 2;
  STARTED = 3;
  STOPPED = 4;
  FAILED = 5;
  ACTIVATED = 6;
  SUSPENDED = 7;
  DEACTIVATED = 8;
  REINIT = 9;
}

message IntegrationMsgProto {
  int64 integrationIdMSB = 1;
  int64 integrationIdLSB = 2;
  string type = 3;
  optional string name = 4;
  optional bool enabled = 5;
  optional string configuration = 6;
  ComponentLifecycleEventProto event = 7;
}

message IntegrationValidationRequestProto {
  int64 idMSB = 1;
  int64 idLSB = 2;
  string serviceId = 3;
  IntegrationProto configuration = 4;
  string type = 5;
  int64 timestamp = 8;
  int64 deadline = 9; // deadline timestamp. after deadline the response is not expected anymore
}

message IntegrationValidationResponseProto {
  int64 idMSB = 1;
  int64 idLSB = 2;
  optional bytes error = 3;
}

message IntegrationProto {
  int64 integrationIdMSB = 1;
  int64 integrationIdLSB = 2;
  int64 createdTime = 3;
  string type = 4;
  string name = 5;
  bool enabled = 6;
  string configuration = 7;
  optional string additionalInfo = 8;
}

enum TbEventSourceProto {
  INTEGRATION = 0;
}

message IntegrationEventProto {
  TbEventSourceProto source = 1;
  int64 eventSourceIdMSB = 2;
  int64 eventSourceIdLSB = 3;
  bytes event = 4;
}

message UplinkIntegrationMsgProto {
  IntegrationEventProto eventProto = 1;
  optional queue.ServiceInfo serviceInfoProto = 2;
}

message UplinkIntegrationNotificationMsgProto {
  IntegrationValidationResponseProto integrationValidationResponseMsg = 1;
}

message DownlinkIntegrationMsgProto {
  IntegrationMsgProto integrationMsg = 1;
  IntegrationValidationRequestProto validationRequestMsg = 2;
}

message PublishIntegrationMsgProto {
  queue.PublishMsgProto publishMsgProto = 1;
  string tbmqNode = 2;
  int64 timestamp = 3;
}
